--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@prisma/client": "^6.1.0"
+    "@prisma/client": "^6.1.0",
+    "prisma-erd-generator": "^1.11.2"
   }
 }
