--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^11.4.2",
     "@types/node": "^22.10.2",
+    "puppeteer": "^23.11.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
